Modificati file refemacs e refauctex

--- a/main.tex
+++ b/main.tex
@@ -558,11 +558,11 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
   \centering
   \unitlength=0.005\textwidth
   \begin{picture}(200,120)
-    \put(0,0){\framebox(94,120){\includegraphics[height=0.52\textwidth]{refemacs}}}
+    \put(0,0){\framebox(94,120){\includegraphics[width=0.51\textwidth]{refemacs}}}
     \put(95,0){\rotatebox{90}{\sffamily\tiny Immagine estratta da
         \href{http://www.ps.uni-saarland.de/courses/prog-ws10/downloads/emacs_refcard.pdf}{GNU
           Emacs Reference Card}}}
-    \put(100,0){\framebox(94,120){\includegraphics[height=0.52\textwidth]{refauctex}}}
+    \put(100,0){\framebox(94,120){\includegraphics[width=0.51\textwidth]{refauctex}}}
     \put(195,0){\rotatebox{90}{\sffamily\tiny Immagine estratta da
         \href{http://devcheatsheet.com/static/pdf/auctex-ref.pdf}{AUC\TeX{}
           Reference Card}}}
