Nessuna modifica sostanziale
Ho aggiunto in alcuni punti dei simboli dollaro commentati, '%$',
perché talvolta la presenza del simbolo del dollaro in ambienti
verbatim sembra confondere il meccanismo di evidenziazione della
sintassi.

--- a/main.tex
+++ b/main.tex
@@ -97,15 +97,15 @@ i comandi da terminale che possono essere eseguiti per installare \emacs{} in
 alcune delle principali distribuzioni: Debian e Ubuntu:
 \begin{Verbatim}
 $ sudo apt-get install emacs
-\end{Verbatim}
+\end{Verbatim}%$
 Fedora:
 \begin{Verbatim}
 $ sudo yum install emacs
-\end{Verbatim}
+\end{Verbatim}%$
 OpenSUSE:
 \begin{Verbatim}
 $ sudo zypper install emacs
-\end{Verbatim} 
+\end{Verbatim}%$ 
 
 Il metodo più difficile, per i non avvezzi all'uso del terminale, consiste nel
 compilare \emacs{} a partire dal codice sorgente, tuttavia non è intenzione di
@@ -115,17 +115,17 @@ Dopo averlo installato, \emacs{} potrà essere avviato facendo clic sul suo
 lanciatore oppure eseguendo da terminale il comando
 \begin{Verbatim}
 $ emacs
-\end{Verbatim}
+\end{Verbatim}%$
 Se si desidera utilizzare \emacs{} con interfaccia testuale bisogna aggiungere
 l'opzione \verb|-nw| oppure \verb|--no-window-system|:
 \begin{Verbatim}
 $ emacs -nw
-\end{Verbatim}
+\end{Verbatim}%$
 Possono essere aggiunti come argomenti da linea di comando il percorso del file
 (o dei file) che si vogliono modificare:
 \begin{Verbatim}
 $ emacs file1.tex file2.tex
-\end{Verbatim}
+\end{Verbatim}%$
 
 \subsection*{\emacs{} per Mac OS}
 Sul mirror ufficiale
@@ -209,15 +209,15 @@ pacchetti della propria distribuzione. Ecco i comandi da usare per
 installare da terminale il pacchetto nelle principali distribuzioni: Debian e Ubuntu:
 \begin{Verbatim}
 $ sudo apt-get install auctex
-\end{Verbatim}
+\end{Verbatim}%$
 Fedora:
 \begin{Verbatim}
 $ sudo yum install emacs-auctex
-\end{Verbatim}
+\end{Verbatim}%$
 OpenSUSE:
 \begin{Verbatim}
 $ sudo zypper install emacs-auctex
-\end{Verbatim}
+\end{Verbatim}%$
 
 
 \subsection*{\auctex{} per Mac OS}
@@ -308,15 +308,15 @@ distribuzione. Il dizionario italiano di GNU Aspell si chiama \verb|aspell-it|
 quindi da terminale può essere installato in Debian con il comando
 \begin{Verbatim}
 $ sudo apt-get install aspell-it
-\end{Verbatim}
+\end{Verbatim}%$
 in Fedora con
 \begin{Verbatim}
 $ sudo yum install aspell-it
-\end{Verbatim}
+\end{Verbatim}%$
 mentre in openSUSE si può eseguire il comando:
 \begin{Verbatim}
 $ sudo zypper install aspell-it
-\end{Verbatim}
+\end{Verbatim}%$
 
 \subsection*{Mac OS}
 \label{sec:aspellmac}
