Modifica comando \author.

--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,8 @@
 \documentclass[10pt,a4paper]{article}
 
 \title{Una introduzione a GNU Emacs \& AUC\TeX{}}
-\author{Orlando Iovino\\(Windows)
-  \and Pinco Pallino\\(GNU/Linux)
-  \and Tizio Sempronio\\(Mac OS)}
+% Inserire nomi autori
+\author{Orlando Iovino\and \textcolor{red}{Elrond}\and \textcolor{red}{matteo.l}}
 \date{\today}
 
 \usepackage{macro}
