Ripresa dello sviluppo della guida: modifica sommario

--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,10 @@
 \documentclass[10pt,a4paper]{article}
 
 \title{Una introduzione a GNU Emacs \& AUC\TeX{}}
-% Inserire nomi autori
-\author{Orlando Iovino\and \textcolor{red}{Elrond}\and \textcolor{red}{matteo.l}}
+
+\author{Orlando Iovino \and 
+\textcolor{red}{Elrond}\and 
+\textcolor{red}{matteo.l}}
 \date{\today}
 
 \usepackage{macro}
@@ -11,10 +13,10 @@
 
 \begin{document} 
 \maketitle
-\begin{abstract}\sffamily
-\noindent Questo articolo nasce con l'intenzione di dare una breve panoramica
-all'uso di \emacs{} per \LaTeX{}, con l'ausilio di \auctex, per i
-principali sistemi operativi. Dopo una introduzione ai programmi,
+\begin{abstract}
+\noindent In questo articolo vengono brevemente presentati il
+programma \emacs{} ed il pacchetto \auctex, per le principali
+piattaforme: Windows, GNU/Linux e Mac OS. Dopo una introduzione ai programmi,
 verranno esposte le modalità per poter installare e configurare
 \emacs{} e \auctex{} per poter scrivere     
 documenti \LaTeX{}. L'articolo non ha la pretesa di essere un
@@ -30,7 +32,7 @@ come spesso viene indicato.
 \section{Introduzione a GNU Emacs \& AUC\TeX}
 \label{sec:intro}
 
-\textcolor{red!50}{\lipsum[1]}
+\textcolor{red}{\lipsum[1]}
 
 \section{Installare \emacs}
 \label{sec:install}
