--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,12 @@
 \documentclass[10pt,a4paper]{article}
 
-\title{Una introduzione a GNU Emacs \& AUC\TeX{}}
+\title{\titolo}
 
-\author{Orlando Iovino \and 
-\textcolor{red}{Elrond}\and 
-\textcolor{red}{matteo.l}}
+\author{%
+\autorea \and 
+\autoreb \and 
+\autorec
+}
 \date{\today}
 
 \usepackage{macro}
