Revisione 1 a 'Emacs per Windows'

--- a/macro.sty
+++ b/macro.sty
@@ -26,8 +26,8 @@
 \RequirePackage[citestyle=authoryear-comp,backref,hyperref]{biblatex}
 \bibliography{biblio}
 
-\providecommand{\emacs}{\textsf{Emacs}}
-\providecommand{\auctex}{\textsf{AUC\TeX{}}}
+\providecommand{\emacs}{Emacs}
+\providecommand{\auctex}{AUC\TeX{}}
 \providecommand{\mano}{\ding{42}}
 
 \providecommand{\titolo}{Una introduzione a GNU Emacs \& AUC\TeX{}}
