Aggiunto file by-nc-nd.pdf e modificata la sezione 'Licenza d'uso'

--- a/macro.sty
+++ b/macro.sty
@@ -4,9 +4,10 @@
 \RequirePackage{textcomp}
 \RequirePackage[utf8]{inputenc}
 \RequirePackage[english,italian]{babel}
-\RequirePackage{mathpazo}
+\RequirePackage{fourier}
 \RequirePackage{microtype}
-\RequirePackage[margin=4cm]{geometry} 
+\RequirePackage[margin=4cm]{geometry}
+\RequirePackage{array}
 \RequirePackage[grid]{multicol}
 \RequirePackage{indentfirst}
 \RequirePackage{pifont}
