--- a/main.tex
+++ b/main.tex
@@ -744,9 +744,15 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 \printbibliography
 \vfill
 \addcontentsline{toc}{section}{Licenza}
-\section*{Licenza}
+\section*{Licenza d'uso}
 \label{sec:lic}
-\textcolor{red}{\lipsum[1]}
+\noindent\begin{tabular}{@{}m{0.16\textwidth}m{0.84\textwidth}@{}}
+\includegraphics[width=0.16\textwidth]{by-nc-nd} &%
+Quest'opera è soggetta alla Creative Commons Public License versione 2.5
+o posteriore. L'enunciato integrale della Licenza in versione 2.5 è reperibile
+all'indirizzo internet
+\url{http://creativecommons.org/licenses/by-nc-nd/2.5/deed.it}\\
+\end{tabular}
 \end{document}
 
 %%% Local Variables: 
