--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,8 @@
 \autoreb \and 
 \autorec
 }
-\date{\today}
+\date{\today\thanks{Le condizioni di utilizzo del seguente articolo
+    sono riportate nell'ultima pagina.}}
 
 \usepackage{macro}
 
