Aggiustato riferimento sezione Licenza

--- a/main.tex
+++ b/main.tex
@@ -744,6 +744,7 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 \nocite{*}
 \printbibliography
 \vfill
+\phantomsection
 \addcontentsline{toc}{section}{Licenza}
 \section*{Licenza d'uso}
 \label{sec:lic}
