Modifiche varie + modifica per sezioni non numerate

--- a/macro.sty
+++ b/macro.sty
@@ -37,6 +37,9 @@
 \providecommand{\autorec}{matteo.l} % mettere nome e cognome
 \providecommand{\autori}{\autorea, \autoreb, \autorec}
 
+\setcounter{secnumdepth}{1}
+\setcounter{tocdepth}{1}
+
 \RequirePackage{hyperref}
 \hypersetup{%
   pdftitle={\titolo},
@@ -45,8 +48,6 @@
     GNU Linux e Mac OS},
   pdfcreator={LaTeX}
 }
-
-
 
 %%% Local Variables:
 %%% mode: latex
