--- a/main.tex
+++ b/main.tex
@@ -715,11 +715,11 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
   \unitlength=0.005\textwidth
   \begin{picture}(200,120)
     \put(0,0){\framebox(94,120){\includegraphics[width=0.51\textwidth]{refemacs}}}
-    \put(95,0){\rotatebox{90}{\sffamily\tiny Immagine estratta da
+    \put(95,0){\rotatebox{90}{\tiny Immagine estratta da
         \href{http://www.ps.uni-saarland.de/courses/prog-ws10/downloads/emacs_refcard.pdf}{GNU
           Emacs Reference Card}}}
     \put(100,0){\framebox(94,120){\includegraphics[width=0.51\textwidth]{refauctex}}}
-    \put(195,0){\rotatebox{90}{\sffamily\tiny Immagine estratta da
+    \put(195,0){\rotatebox{90}{\tiny Immagine estratta da
         \href{http://devcheatsheet.com/static/pdf/auctex-ref.pdf}{AUC\TeX{}
           Reference Card}}}
   \end{picture}
@@ -740,13 +740,13 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 \addcontentsline{toc}{section}{Licenza d'uso}
 \section*{Licenza d'uso}
 \label{sec:lic}
-\noindent\begin{tabular}{@{}lm{0.84\textwidth}@{}}
-\includegraphics[width=0.16\textwidth]{by-nc-nd} &%
+\mettifigura{\includegraphics[height=17pt]{by-nc-nd}\hspace{2mm}}\noindent 
 Quest'opera è soggetta alla Creative Commons Public License versione 3.0
-o posteriore. L'enunciato integrale della Licenza in versione 3.0 è reperibile
-all'indirizzo internet
-\url{http://creativecommons.org/licenses/by-nc-nd/3.0/deed.it}\\
-\end{tabular}
+o posteriore: Attribuzione - Non commerciale - Non opere
+derivate. L'enunciato integrale della Licenza in versione 3.0 è
+reperibile sul sito ufficiale
+(\mano{}~\href{http://creativecommons.org/licenses/by-nc-nd/3.0/deed.it}{CC
+By-Nc-Nd}).
 \end{document}
 
 %%% Local Variables: 
