Modifiche sezioni per Windows + varie

--- a/TODO
+++ b/TODO
@@ -2,5 +2,6 @@
 * Stabilire classe, layout, font
 * Stabilire licenza
 * Pianificare sezioni da aggiungere
-  - Ricerca diretta/inversa
+  - Ricerca diretta/inversa (ok)
+  - Licenza d'uso (ok)
 * Completare sezioni in rosso
