--- a/macro.sty
+++ b/macro.sty
@@ -1,3 +1,4 @@
+
 \ProvidesPackage{macro}
 
 \RequirePackage[T1]{fontenc}
@@ -13,6 +14,7 @@
 \RequirePackage{pifont}
 \RequirePackage{guit}
 \RequirePackage{graphicx}
+\RequirePackage{booktabs}
 \RequirePackage{xcolor}
 \RequirePackage{tocloft}
 
@@ -29,12 +31,12 @@
 
 \providecommand{\emacs}{Emacs}
 \providecommand{\auctex}{AUC\TeX{}}
-\providecommand{\mano}{\ding{42}}
+\providecommand{\mano}{\ding{43}}
 
 \providecommand{\titolo}{Una introduzione a GNU Emacs \& AUC\TeX{}}
 \providecommand{\autorea}{Orlando Iovino}
-\providecommand{\autoreb}{Elrond}   % mettere nome e cognome
-\providecommand{\autorec}{matteo.l} % mettere nome e cognome
+\providecommand{\autoreb}{\textcolor{red}{Elrond}}   % mettere nome e cognome
+\providecommand{\autorec}{\textcolor{red}{matteo.l}} % mettere nome e cognome
 \providecommand{\autori}{\autorea, \autoreb, \autorec}
 
 \setcounter{secnumdepth}{1}
