--- a/main.tex
+++ b/main.tex
@@ -742,13 +742,12 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 \addcontentsline{toc}{section}{Licenza d'uso}
 \section*{Licenza d'uso}
 \label{sec:lic}
-\mettifigura{\includegraphics[height=17pt]{by-nc-nd}\hspace{2mm}}\noindent 
+\mettifigura{\includegraphics[height=17pt]{by-nc-sa}\hspace{2mm}}\noindent 
 Quest'opera è soggetta alla Creative Commons Public License versione 3.0
-o posteriore: Attribuzione - Non commerciale - Non opere
-derivate. L'enunciato integrale della Licenza in versione 3.0 è
+o posteriore: Attribuzione - Non commerciale - Condividi allo stesso modo. L'enunciato integrale della Licenza in versione 3.0 è
 reperibile sul sito ufficiale
-(\mano{}~\href{http://creativecommons.org/licenses/by-nc-nd/3.0/deed.it}{CC
-By-Nc-Nd}).
+(\mano{}~\href{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}{CC
+By-Nc-Sa}).
 \end{document}
 
 %%% Local Variables: 
