Impostato Biber come backend per biblatex

--- a/biblio.bib
+++ b/biblio.bib
@@ -52,7 +52,7 @@
   year =     2006,
   number =   2,
   pages =    {60-64},
-  month =    {Ottobre},
+  month =    {10},
   language=  {italian},
   issn=      {1828-2350},
   url=       {http://www.guit.sssup.it/arstexnica/}
