--- a/biblio.bib
+++ b/biblio.bib
@@ -3,57 +3,49 @@
 
 @MISC{will:due,
   author = {William Blum},
-  title = {Configuring editors with SumatraPDF},
-  year = {2011},
-  url = {http://william.famille-blum.org/blog/static.php?page=static081010-000413}
+  title	 = {Configuring editors with SumatraPDF},
+  year	 = {2011},
+  url	 = {http://william.famille-blum.org/blog/index.php} 
 }
 
 @MISC{will:uno,
   author = {William Blum},
-  title = {SumatraPDF for TeX users},
-  year = {2011},
-  url = {http://william.famille-blum.org/software/sumatra/index.html}
+  title  = {SumatraPDF for TeX users},
+  year   = {2011},
+  url    = {http://william.famille-blum.org/software/sumatra/index.html}
 }
 
 @MISC{emacsW32:wiki,
-  title = {EmacsW32},
-  year = {2011},
-  url = {http://www.emacswiki.org/emacs/EmacsW32}
-}
-
-@BOOKLET{arte:latex,
-  title = {L'arte di scrivere con \LaTeX. Un'introduzione a \LaTeX},
-  author = {Lorenzo Pantieri and Tommaso Gordini},
-  month = {4},
-  year = {2011},
-  url = {www.lorenzopantieri.net/LaTeX_files/ArteLaTeX.pdf}
+  title  = {EmacsW32},
+  year   = {2011},
+  url    = {http://www.emacswiki.org/emacs/EmacsW32}
 }
 
 @MANUAL{emacs:stallman,
-  title = {GNU Emacs Manual},
-  author = {Richard Stallman},
+  title        = {GNU Emacs Manual},
+  author       = {Richard Stallman},
   organization = {Free Software Foundation, Inc.},
-  edition = {16},
-  year = {2010},
-  url = {www.gnu.org/software/emacs/manual/emacs.pdf}
+  edition      = {16},
+  year         = {2010},
+  url          = {www.gnu.org/software/emacs/manual/emacs.pdf}
 }
 
 @MANUAL{auctex:manual,
-  title = {AUC\TeX, A sophisticated \TeX{} environment for Emacs},
-  author = {Kresten Krab Thorup and Per Abrahamsen and David Kastrup and others},
+  title        = {AUC\TeX, A sophisticated \TeX{} environment for Emacs},
+  author       = {Kresten Krab Thorup and Per Abrahamsen and David Kastrup and others},    
   organization = {Free Software Foundation, Inc.},
   year = {2010},
   url = {www.gnu.org/software/auctex/manual/auctex.pdf}
 }
 @ARTICLE{emacs:odebari,
-  author =   {Onofrio de Bari},
-  title =    {{GNU Emacs} e {AUC\TeX} per {\LaTeX}},
-  journal =  {Ars\TeX nica},
-  year =     2006,
-  number =   2,
-  pages =    {60-64},
-  month =    {10},
-  language=  {italian},
-  issn=      {1828-2350},
-  url=       {http://www.guit.sssup.it/arstexnica/}
+  author       = {Onofrio de Bari},
+  title	       = {{GNU Emacs} e {AUC\TeX} per {\LaTeX}},
+  journal      = {Ars\TeX nica},
+  year	       = {2006},
+  number       = {2},
+  pages	       = {60-64},
+  month	       = {10},
+  language     = {italian},
+  issn	       = {1828-2350},
+  url	       = {http://www.guit.sssup.it/arstexnica/}
 }
