--- a/main.tex
+++ b/main.tex
@@ -1,31 +1,24 @@
-\documentclass[10pt,a4paper]{article}
+\listfiles
+\documentclass[11pt,a4paper]{article}
 
 \title{\titolo}
+\author{\autorea \and \autoreb \and \autorec}
+\date{\today}
 
-\author{%
-\autorea \and 
-\autoreb \and 
-\autorec
-}
-\date{\today\thanks{Le condizioni di utilizzo del seguente articolo
-    sono riportate nell'ultima pagina.}}
+\usepackage{preambolo,lipsum}
 
-\usepackage{macro}
-
-\usepackage{lipsum}
 
 \begin{document}\maketitle
 \begin{abstract}
-\noindent In questo articolo vengono brevemente presentati il
-programma \emacs{} ed il pacchetto \auctex, per le principali
-piattaforme: Windows, GNU/Linux e Mac OS. Dopo una introduzione ai
-programmi, 
-verranno esposte le modalità per poter installare e configurare
-\emacs{} e \auctex{} per poter scrivere     
-documenti \LaTeX{}. L'articolo non ha la pretesa di essere un
-\emph{manuale}, bensì un piccolo tutorial per far avvicinare gli 
-utenti di \LaTeX{} a questo programma, non così troppo complicato 
-come spesso viene indicato.
+  \noindent In questo articolo vengono brevemente presentati il
+  programma \emacs{} ed il pacchetto \auctex per le principali
+  piattaforme: Windows, GNU/Linux e Mac OS. Dopo una introduzione ai
+  programmi, verranno esposte le modalità per poter installare e
+  configurare \emacs{} e \auctex{} per poter scrivere documenti
+  \LaTeX{}. L'articolo non ha la pretesa di essere un \emph{manuale},
+  bensì un piccolo tutorial per far avvicinare gli utenti di \LaTeX{}
+  a questo programma, non così troppo complicato come spesso viene
+  indicato.
 \end{abstract}
 
 \begin{multicols}{2}
@@ -42,6 +35,8 @@ come spesso viene indicato.
 
 \subsection{\emacs{} per Windows}
 \label{sec:installwin}
+
+
 Per sistemi operativi Microsoft Windows non esiste una vera e propria
 procedura di installazione. \emacs{} si può utilizzare semplicemente
 procurandosi l'archivio che contiene gli eseguibili.
@@ -56,45 +51,44 @@ il suddetto archivio in:
 \begin{Verbatim}
 C:/Programmi/emacs/
 \end{Verbatim}
-La cartella appena creata contiene i file riportati in~\ref{tab:fileemacs}.
+La cartella appena creata contiene i file riportati
+in~\ref{tab:fileemacs}.
 \begin{table}[t]
-\centering
-\begingroup\ttfamily
-\begin{tabular}{lrlcclrl}
-\toprule
-  <DIR> &        & bin    & & & <DIR> &        & leim       \\
-        & 1.044  & BUGS   & & & <DIR> &        & lisp       \\
-        & 35.147 & COPYING& & &       & 5.276  & README     \\
-  <DIR> &        & etc    & & &       & 11.350 & README.W32 \\
-  <DIR> &        & info   & & & <DIR> &        & site-lisp  \\
-        & 36.533 & INSTALL& & &       &        &            \\
-\bottomrule
-\end{tabular}\endgroup
-\caption{Contenuto dell'archivio di \emacs{} per Windows}
-\phantomsection\label{tab:fileemacs}
+  \centering
+  \begingroup\ttfamily
+  \begin{tabular}{lrllrl}
+    \toprule
+    <DIR> &        & bin     & <DIR> &        & leim       \\
+          & 1.044  & BUGS    & <DIR> &        & lisp       \\
+          & 35.147 & COPYING &       & 5.276  & README     \\
+    <DIR> &        & etc     &       & 11.350 & README.W32 \\
+    <DIR> &        & info    & <DIR> &        & site-lisp  \\
+          & 36.533 & INSTALL &       &        &            \\
+    \bottomrule
+  \end{tabular}\endgroup
+  \caption{Contenuto dell'archivio di \emacs{} per Windows}
+  \phantomsection\label{tab:fileemacs}
 \end{table}
 
 Se si vuole creare un collegamento di \emacs{} nel menù Start, è
-sufficiente un doppio clic sul file \emph{addpm.exe} contenuto nella cartella:
+sufficiente un doppio clic sul file \emph{addpm.exe} contenuto nella
+cartella:
 \begin{Verbatim}
 C:/Programmi/emacs/bin
 \end{Verbatim}
 
-Se si vuole aggiungere il percorso degli eseguibili di \emacs{} nella
-variabile d'ambiente \emph{PATH}, per poter aprire Emacs da ogni
-posizione, bisogna farlo manualmente\footnote{Anche se non proprio in
-  stile \emph{Windows}, l'autore delle note trova davvero comodo l'uso
-del \emph{Prompt dei comandi.}}.
-
 \subsection{\emacs{} per GNU/Linux}
 \label{sec:installlinux}
-\emacs{} fa parte del progetto GNU quindi è presente in tutti i sistemi
-operativi della famiglia GNU/Linux. Se non è già installato, il metodo più
-semplice per ottenere \emacs{} in un sistema GNU/Linux è far riferimento al
-gestore pacchetti della propria distribuzione. Si possono naturalmente
-utilizzare i gestori di pacchetti a interfaccia grafica, riportiamo qui inoltre
-i comandi da terminale che possono essere eseguiti per installare \emacs{} in
-alcune delle principali distribuzioni: Debian e Ubuntu:
+
+
+\emacs{} fa parte del progetto GNU quindi è presente in tutti i
+sistemi operativi della famiglia GNU/Linux. Se non è già installato,
+il metodo più semplice per ottenere \emacs{} in un sistema GNU/Linux è
+far riferimento al gestore pacchetti della propria distribuzione. Si
+possono naturalmente utilizzare i gestori di pacchetti a interfaccia
+grafica, riportiamo qui inoltre i comandi da terminale che possono
+essere eseguiti per installare \emacs{} in alcune delle principali
+distribuzioni: Debian e Ubuntu:
 \begin{Verbatim}
 $ sudo apt-get install emacs
 \end{Verbatim}
@@ -108,32 +102,34 @@ OpenSUSE:
 \begin{Verbatim}
 $ sudo zypper install emacs
 \end{Verbatim}
-% $ 
+% $
 
-Il metodo più difficile, per i non avvezzi all'uso del terminale, consiste nel
-compilare \emacs{} a partire dal codice sorgente, tuttavia non è intenzione di
-questa guida spiegare come fare ciò.
+Il metodo più difficile, per i non avvezzi all'uso del terminale,
+consiste nel compilare \emacs{} a partire dal codice sorgente,
+tuttavia non è intenzione di questa guida spiegare come fare ciò.
 
-Dopo averlo installato, \emacs{} potrà essere avviato facendo clic sul suo
-lanciatore oppure eseguendo da terminale il comando
+Dopo averlo installato, \emacs{} potrà essere avviato facendo clic sul
+suo lanciatore oppure eseguendo da terminale il comando
 \begin{Verbatim}
 $ emacs
 \end{Verbatim}
 % $
-Se si desidera utilizzare \emacs{} con interfaccia testuale bisogna aggiungere
-l'opzione \verb|-nw| oppure \verb|--no-window-system|:
+Se si desidera utilizzare \emacs{} con interfaccia testuale bisogna
+aggiungere l'opzione \verb|-nw| oppure \verb|--no-window-system|:
 \begin{Verbatim}
 $ emacs -nw
 \end{Verbatim}
 % $
-Possono essere aggiunti come argomenti da linea di comando il percorso del file
-(o dei file) che si vogliono modificare:
+Possono essere aggiunti come argomenti da linea di comando il percorso
+del file (o dei file) che si vogliono modificare:
 \begin{Verbatim}
 $ emacs file1.tex file2.tex
 \end{Verbatim}
 % $
 
 \subsection{\emacs{} per Mac OS}
+
+
 Sul mirror ufficiale
 (\href{http://ftp.gnu.org/pub/gnu/emacs/windows/}{\mano{} \emacs}) non
 è presente una versione già compilata per Mac OS X, queste versioni
@@ -174,41 +170,41 @@ graffe e la tilde, scrivendo queste righe nel file \emph{.emacs}
 \label{sec:auctexwin}
 
 Dal sito ufficiale di \auctex{} per Windows (\href{%
-http://www.gnu.org/software/auctex/download-for-windows.html}%
+  http://www.gnu.org/software/auctex/download-for-windows.html}%
 {\mano{} \auctex}), si scarica l'archivio compresso \href{%
-http://ftp.gnu.org/pub/gnu/auctex/auctex-11.86-e23.2-msw.zip}%
-{\textsf{auctex-11.86-e23.2-msw.zip}} e lo si decomprime in 
+  http://ftp.gnu.org/pub/gnu/auctex/auctex-11.86-e23.2-msw.zip}%
+{\textsf{auctex-11.86-e23.2-msw.zip}} e lo si decomprime in
 \begin{Verbatim}
 C:/Programmi/emacs/
 \end{Verbatim}
-Sia nell'archivio di \auctex{} (tabella~\ref{tab:fileauc}), che quello di
-\emacs{} (tabella~\ref{tab:fileemacs}), posizionato in 
-precedenza nel percorso suddetto, vi è una cartella dal nome
-\texttt{site-lisp}: i file contenuti in queste cartelle vanno uniti in
-una sola cartella. 
+Sia nell'archivio di \auctex{} (tabella~\ref{tab:fileauc}), che quello
+di \emacs{} (tabella~\ref{tab:fileemacs}), posizionato in precedenza
+nel percorso suddetto, vi è una cartella dal nome \texttt{site-lisp}:
+i file contenuti in queste cartelle vanno uniti in una sola cartella.
 
 \begin{table}[t]
-\centering
-\begingroup\ttfamily
-\begin{tabular}{ll}
-\toprule
-  <DIR> & doc       \\
-  <DIR> & info      \\
-  <DIR> & site-lisp \\
-  <DIR> & var       \\
-\bottomrule
-\end{tabular}\endgroup
-\caption{Contenuto dell'archivio di \auctex{} per Windows}
-\phantomsection\label{tab:fileauc}
+  \centering
+  \begingroup\ttfamily
+  \begin{tabular}{ll}
+    \toprule
+    <DIR> & doc       \\
+    <DIR> & info      \\
+    <DIR> & site-lisp \\
+    <DIR> & var       \\
+    \bottomrule
+  \end{tabular}\endgroup
+  \caption{Contenuto dell'archivio di \auctex{} per Windows}
+  \phantomsection\label{tab:fileauc}
 \end{table}
 
 \subsection{\auctex{} per GNU/Linux}
 \label{sec:auctexlinux}
 
-Anche il pacchetto \auctex{} è presente nei sistemi GNU/Linux. Come già detto
-per \emacs, per installare \auctex{} si consiglia di utilizzare il gestore
-pacchetti della propria distribuzione. Ecco i comandi da usare per
-installare da terminale il pacchetto nelle principali distribuzioni: Debian e Ubuntu:
+Anche il pacchetto \auctex{} è presente nei sistemi GNU/Linux. Come
+già detto per \emacs, per installare \auctex{} si consiglia di
+utilizzare il gestore pacchetti della propria distribuzione. Ecco i
+comandi da usare per installare da terminale il pacchetto nelle
+principali distribuzioni: Debian e Ubuntu:
 \begin{Verbatim}
 $ sudo apt-get install auctex
 \end{Verbatim}
@@ -288,11 +284,10 @@ displayline %n %o %b")
 Come visualizzatore principale si utilizza
 \href{http://skim-app.sourceforge.net/}{Skim} perché supporta la
 ricerca diretta e inversa dal pdf, i dettagli sulla configurazione di
-\emacs e Skim sono riportati nel paragrafo \ref{sec:fismac}.
+\emacs\ e Skim sono riportati nel paragrafo \ref{sec:fismac}.
 
-\section{Personalizzare \emacs{} }  % titolo cambiato per avere un
-                                % effetto migliore nell'indice, ma in
-                                % realtà non mi piace
+\section{Personalizzare \emacs{} } % titolo cambiato per avere un
+% effetto migliore nell'indice, ma in realtà non mi piace
 \label{sec:personal}
 
 \textcolor{red!50}{\lipsum[1]}
@@ -301,23 +296,24 @@ ricerca diretta e inversa dal pdf, i dettagli sulla configurazione di
 \label{sec:corr}
 Per abilitare \emacs{} a lavorare con la lingua italiana, bisogna
 installare il correttore ortografico. Le procedure, poiché differenti,
-vengono di seguito esposte per tutti e tre i sistemi operativi. 
-L'uso è ovviamente invariante. 
+vengono di seguito esposte per tutti e tre i sistemi operativi.  L'uso
+è ovviamente invariante.
 
-Per poter fare una \emph{revisione} del proprio file, bisogna digitare:
+Per poter fare una \emph{revisione} del proprio file, bisogna
+digitare:
 \begin{Verbatim}
 M-x ispell
 \end{Verbatim}
-in questo modo il dizionario proporrà in sequenza, la correzione
-dei termini che trova errati; un secondo modo, per scrivere
-correttamente, è attivare la modalità \emph{flyspell} (correzione al
-volo, interattiva). Se la si vuole
-attivare solo sul documento corrente basta andare in:
+in questo modo il dizionario proporrà in sequenza, la correzione dei
+termini che trova errati; un secondo modo, per scrivere correttamente,
+è attivare la modalità \emph{flyspell} (correzione al volo,
+interattiva). Se la si vuole attivare solo sul documento corrente
+basta andare in:
 \begin{Verbatim}
 Tools > Spell Checking > Automatic spell checking (Flyspell)
 \end{Verbatim}
-se invece la si vuole tenere sempre abilitata,
-basta aggiungere la riga:
+se invece la si vuole tenere sempre abilitata, basta aggiungere la
+riga:
 \begin{Verbatim}
 (add-hook 'LaTeX-mode-hook 'flyspell-mode)
 \end{Verbatim}
@@ -328,46 +324,50 @@ la quale proporrà possibili soluzioni.
 
 \subsection{Windows}
 \label{sec:aspellwin}
-Per installare il correttore ortografico in ambiente
-Windows, si può usare il programma \textsf{GNU Aspell}
-(\href{http://aspell.net/win32/}{\mano{} \textsf{GNU Aspell - Win32 version}}). L'ultima
-versione stabile per Windows, seppur datata Dicembre 2002, è la \textsf{0.50-3}.
+Per installare il correttore ortografico in ambiente Windows, si può
+usare il programma \textsf{GNU Aspell}
+(\href{http://aspell.net/win32/}{\mano{} \textsf{GNU Aspell - Win32
+    version}}). L'ultima versione stabile per Windows, seppur datata
+Dicembre 2002, è la \textsf{0.50-3}.
 
 I file che bisogna procurarsi sono quelli che vengono di seguito
-riportati; si badi bene ad installarli nell'ordine in cui vengono dati:
+riportati; si badi bene ad installarli nell'ordine in cui vengono
+dati:
 
 \begin{enumerate}
-\item l'installer completo \href{http://ftp.gnu.org/gnu/aspell/w32/Aspell-0-50-3-3-Setup.exe}%
-{\textsf{Aspell-0-50-3-3-Setup.exe}} (che rappresenta il programma
-vero e proprio);
+\item l'installer completo
+  \href{http://ftp.gnu.org/gnu/aspell/w32/Aspell-0-50-3-3-Setup.exe}%
+  {\textsf{Aspell-0-50-3-3-Setup.exe}} (che rappresenta il programma
+  vero e proprio);
 \item il dizionario precompilato per l'italiano
-\href{http://ftp.gnu.org/gnu/aspell/w32/Aspell-it-0.50-2-3.exe}%
-{\textsf{Aspell-it-0.50-2-3.exe}}.
+  \href{http://ftp.gnu.org/gnu/aspell/w32/Aspell-it-0.50-2-3.exe}%
+  {\textsf{Aspell-it-0.50-2-3.exe}}.
 \end{enumerate}
 
 Alla stessa pagina di questi file sono disponibili tanti altri
 dizionari precompilati, più o meno aggiornati, di altre lingue.
 
-Resta qualche altra operazione da fare. Come prima cosa si deve copiare il
-percorso della cartella dove sono contenuti gli eseguibili di Aspell nella
-\textsf{PATH} di Windows. Secondo, aggiungere al proprio \emph{.emacs} le seguenti
-righe di codice:
+Resta qualche altra operazione da fare. Come prima cosa si deve
+copiare il percorso della cartella dove sono contenuti gli eseguibili
+di Aspell nella \textsf{PATH} di Windows. Secondo, aggiungere al
+proprio \emph{.emacs} le seguenti righe di codice:
 
 \begin{Verbatim}
-(setq-default ispell-program-name "aspell")
-(setq-default ispell-extra-args '("--reverse"))
+(setq-default ispell-program-name "aspell") 
+(setq-default ispell-extra-args '("--reverse")) 
 (setq ispell-dictionary "italiano")
 \end{Verbatim}
-dove la seconda riga di codice serve a \emph{fixare} dei problemi con le versioni
-precedenti.
+dove la seconda riga di codice serve a \emph{fixare} dei problemi con
+le versioni precedenti.
 
 \subsection{GNU/Linux}
 \label{sec:aspelllinux}
 
-Il correttore ortografico GNU Aspell può essere installato facilmente su
-GNU/Linux utilizzando, come al solito, il gestore pacchetti della propria
-distribuzione. Il dizionario italiano di GNU Aspell si chiama \verb|aspell-it|
-quindi da terminale può essere installato in Debian con il comando
+Il correttore ortografico GNU Aspell può essere installato facilmente
+su GNU/Linux utilizzando, come al solito, il gestore pacchetti della
+propria distribuzione. Il dizionario italiano di GNU Aspell si chiama
+\verb|aspell-it| quindi da terminale può essere installato in Debian
+con il comando
 \begin{Verbatim}
 $ sudo apt-get install aspell-it
 \end{Verbatim}
@@ -400,16 +400,16 @@ nell'archivio
 
 Dopo aver scaricato i dizionari bisogna estarre il contento
 dell'archivio in una cartella temporanea, aprire una sessione di
-terminale e portarsi nella cartella appena creata. I dizionari si installano
-dando i seguenti comandi
+terminale e portarsi nella cartella appena creata. I dizionari si
+installano dando i seguenti comandi
 \begin{verbatim}
 $ ./configure
 $ make
 $ sudo make install
 \end{verbatim}
 
-Come ultima cosa è necessario configurare \emacs aggiungendo al \emph{.emacs}
-le seguenti righe:
+Come ultima cosa è necessario configurare \emacs aggiungendo al
+\emph{.emacs} le seguenti righe:
 \begin{verbatim}
 (setq-default ispell-program-name "aspell")
 (setq ispell-dictionary "italiano")
@@ -418,67 +418,71 @@ le seguenti righe:
 \section{Ricerca diretta-inversa}
 \label{sec:ricdirinv}
 
-Una delle  principali funzioni che spesso l'utente  \LaTeX{} cerca nel
-proprio editor, è quella della ricerca inversa-diretta, molto utile in
-fase di revisione finale del proprio documento, e specie quando il
-documento è abbastanza corposo.
+Una delle principali funzioni che spesso l'utente \LaTeX{} cerca nel
+proprio editor, è quella della ricerca diretta-inversa, molto utile in
+fase di revisione finale del proprio documento, e specie quando
+quest'ultimo abbastanza corposo.
 
-Alcuni editor di  testo hanno un visualizzatore integrato preconfigurato  
-per la  ricerca dal  sorgente al  pdf e  viceversa, come  per
-esempio \TeX works; altri,  come \emacs, richiedono alcuni passaggi per
-arrivare allo scopo.
+Alcuni editor di testo hanno un visualizzatore integrato
+preconfigurato per effettuare la ricerca dal sorgente tex al file pdf
+e viceversa, come per esempio \TeX works; altri, come \emacs,
+richiedono alcuni passaggi per arrivare allo scopo.
 
-Le procedure  per abilitare tale funzione  in \emacs{} variano  per i tre
-sistemi  operativi, ma non  solo: variano  anche i  visualizzatori che
-permettono tale funzione. In~\parencite{arte:latex} vengono citate le
-cosiddette \emph{coppie vincenti} adatte allo scopo.
-
-In ambiente  Windows, l'unico visualizzatore  capace di fare  questo è
-SumatraPDF, \textcolor{red}{in  ambiente Linux si può  usare [\ldots]},
-mentre in ambiente Mac OS si usa Skim.
+Le procedure per abilitare tale funzione in \emacs{} variano per i tre
+sistemi operativi, ma non solo, variano anche i visualizzatori che
+permettono tale funzione infatti in ambiente Windows, l'unico
+visualizzatore capace di fare questo è SumatraPDF, \textcolor{red}{in
+  ambiente Linux si può usare [\ldots]}, mentre in ambiente Mac OS si
+usa Skim. 
 
 \subsection{Ricerca diretta-inversa su Windows}
 \label{sec:fiswin}
-Prima di entrare nel vivo dell'argomento, bisogna ovviare ad un bug che
-da tempo segue il programma \emacs{} su Windows, in particolare i
+Prima di entrare nel vivo dell'argomento, bisogna ovviare ad un bug
+che da tempo segue il programma \emacs{} su Windows, in particolare i
 sistemi Windows Vista e Seven (su Xp non dovrebbero esserci problemi),
-ovvero il problema che si ha quando si abilita il server 
-in emacs. % Specificare?
+ovvero il problema che si ha quando si abilita il server in
+emacs. % Specificare?
 
 La soluzione a tale problema è riportata in~\parencite{emacsW32:wiki}
-alla voce \href{http://www.emacswiki.org/emacs/EmacsW32#toc49}{\emph{Waiting for Emacs server to start" is ownership problem on ~/.emacs.d/server}}.
+alla voce
+\href{http://www.emacswiki.org/emacs/EmacsW32#toc49}{\emph{Waiting for
+    Emacs server to start" is ownership problem on
+    ~/.emacs.d/server}}.
 
 Per i sistemi operativi Windows il solo visualizzatore capace di
 interagire con il file sorgente \textsf{.tex} creato con \emacs{} è
-\textsf{SumatraPDF} (\href{http://blog.kowalczyk.info/software/sumatrapdf/free-pdf-reader.html}{\mano{}~SumatraPDF}).
+\textsf{SumatraPDF}
+(\href{http://blog.kowalczyk.info/software/sumatrapdf/free-pdf-reader.html}{\mano{}~SumatraPDF}).
 
 Per la verità, il visualizzatore sviluppato da Krzysztof Kowalczyk non
 supporta questa funzionalità, o meglio, non è ancora accessibile
-all'utente, pertanto, dopo averlo installato si può
-procedere nel seguente modo:
+all'utente, pertanto, dopo averlo installato si può procedere nel
+seguente modo:
 \begin{enumerate}
 \item si scarica l'eseguibile \textsf{SumatraPDF-TeX}
   (\href{http://william.famille-blum.org/software/sumatra/}{\mano{}~SumatraPDF
-    for \TeX\ users}) di William Blum
-  che ha sviluppato appunto la funzionalità di ricerca diretta-inversa
-  e fornito un modo per accedervi;
+    for \TeX\ users}) di William Blum che ha sviluppato appunto la
+  funzionalità di ricerca diretta-inversa e fornito un modo per
+  accedervi;
 \item si rinomina l'eseguibile SumatraPDF-TeX in SumatraPDF;
 \item si copia tale file nella cartella dove è contenuto quello
   installato precedentemente.
 \end{enumerate}
 
-A queste operazioni segue la configurazione di \textsf{SumatraPDF} e di \emacs,
-mediante il proprio file \emph{.emacs}.
+A queste operazioni segue la configurazione di \textsf{SumatraPDF} e
+di \emacs, mediante il proprio file \emph{.emacs}.
 
 Per la ricerca inversa si deve aprire SumatraPDF, andare in
-\texttt{Impostazioni > Opzioni...} e digitare la riga
+\texttt{Impostazioni} e quindi scegliere \texttt{Opzioni...} e
+digitare la riga 
 \begin{Verbatim}
 C:/Programmi/emacs/bin/emacsclientw.exe +%l "%f"
 \end{Verbatim}
 in \emph{Set inverse search command-line}.
 
 Per la ricerca diretta invece, si deve scaricare lo script
-\textsf{sumatra-forward} (\href{http://william.famille-blum.org/software/sumatra/sumatra-forward.el}{\mano{}~sumatra-forward.el})
+\textsf{sumatra-forward}
+(\href{http://william.famille-blum.org/software/sumatra/sumatra-forward.el}{\mano{}~sumatra-forward.el})
 e copiarlo in una cartella accessibile a \emacs{} (l'autore delle note
 l'ha posizionato in \texttt{C:/Programmi/emacs/bin/site-lisp}), per
 poi richiamarlo all'interno del proprio file \emph{.init} con la riga
@@ -491,10 +495,10 @@ ed infine accertarsi di avere nella cartella degli eseguibili di
   \textsf{ddeclient}})
 
 Fatto questo resta da far capire a \emacs{} che si vuole la ricera
-diretta inversa, e per farlo si possono scrivere nel proprio \emph{.init}
-file, le seguenti righe:
+diretta inversa, e per farlo si possono scrivere nel proprio
+\emph{.init} file, le seguenti righe:
 \begin{Verbatim}
-(setq TeX-source-correlate-method (quote synctex))
+(setq TeX-source-correlate-method (quote synctex)) 
 (setq TeX-source-correlate-mode t)
 (setq TeX-source-correlate-start-server t)
 \end{Verbatim}
@@ -505,18 +509,16 @@ ricerca diretta invece, basta fare doppio click nel visualizzatore e
 nel file .tex il cursore si sposterà all'inizio della riga che
 contiene quella parola.
 
-Si vuole infine dare un suggerimento al lettore, qualora \textsf{SumatraPDF}
-non sia il proprio visualizzatore preferito. Infatti è possibile
-impostare \textsf{SumatraPDF} come visualizzatore predefinito di \emacs{} e non
-del sistema operativo (lasciando magari \textsf{Adobe Reader}), aggiungendo le
-seguenti righe a quelle sopra descritte:
+Si vuole infine dare un suggerimento al lettore, qualora
+\textsf{SumatraPDF} non sia il proprio visualizzatore
+preferito. Infatti è possibile impostare \textsf{SumatraPDF} come
+visualizzatore predefinito di \emacs{} e non del sistema operativo
+(lasciando magari \textsf{Adobe Reader}), aggiungendo le seguenti
+righe a quelle sopra descritte:
 \begin{Verbatim}
-(setq TeX-view-program-list (quote (
-   ("SumatraPDF" "SumatraPDF %o"))))
-(setq TeX-view-program-selection (quote (
-   (output-pdf "SumatraPDF") 
-   (output-dvi "Yap") 
-   (output-html "start"))))
+(setq TeX-view-program-list (quote (("SumatraPDF" "SumatraPDF %o"))))
+(setq TeX-view-program-selection (quote ( (output-pdf "SumatraPDF")
+(output-dvi "Yap") (output-html "start"))))
 \end{Verbatim}
 
 \subsection{Ricerca diretta-inversa su GNU/Linux}
@@ -530,18 +532,21 @@ seguenti righe a quelle sopra descritte:
 L'unico visualizzatore di file PDF per Mac OS X che supporta la
 ricerca diretta e inversa associato a \emacs{} è
 \href{http://skim-app.sourceforge.net/}{Skim}, già citato nel
-paragrafo~\ref{sec:auctexmac}, relativo all'installazione di \auctex{}.
+paragrafo~\ref{sec:auctexmac}, relativo all'installazione di
+\auctex{}.
 
 Dopo averlo installato occorre configurarlo impostando quanto segue
 nella pagina \emph{Sincronizza} delle preferenze:
 \begin{itemize}
 \item selezionare la checkbox \emph{Controlla cambiamenti del file}
-\item scrivere \verb!/Applications/Emacs.app/Contents/MacOS/bin/emacsclient!
-  nel campo \emph{Comando}
+\item scrivere
+  \verb!/Applications/Emacs.app/Contents/MacOS/bin/emacsclient!  nel
+  campo \emph{Comando}
 \item scrivere \verb!--no-wait +%line "%file"! nel campo
   \emph{Argomenti}
 \end{itemize}
-Nella figura~\ref{fig:skimpref} sono riportate le impostazioni corrette.
+Nella figura~\ref{fig:skimpref} sono riportate le impostazioni
+corrette.
 \begin{figure}[tb]
   \centering
   \includegraphics[width=\textwidth]{preferenze-Skim}
@@ -554,8 +559,8 @@ modificato da un altro processo Skim chieda se deve essere ricaricato,
 scegliendo Automatico successivi aggiornamenti vengono ricaricati
 senza chiedere conferma.
 
-La configurazione di \emacs{} è analoga a quella degli altri sistemi operativi,
-occorre scrivere queste righe in \emph{.emacs}
+La configurazione di \emacs{} è analoga a quella degli altri sistemi
+operativi, occorre scrivere queste righe in \emph{.emacs}
 \begin{verbatim}
 (setq TeX-source-correlate-method 'synctex)
 (setq TeX-source-correlate-mode t)
@@ -583,7 +588,7 @@ aggiungere queste righe al file \emph{.emacs}
 
 La \emph{skeleton mode} è uno speciale (ma potente) minilinguaggio,
 scritto in Elisp (un dialetto di Lisp) ed incluso di default in
-\emacs. Maggiori informazioni si possono ottenere digitando 
+\emacs. Maggiori informazioni si possono ottenere digitando
 \verb!C-h i d m Autotype! in \emacs.
 
 La \emph{skeleton mode} permette in maniera molto semplice di crearsi
@@ -598,19 +603,13 @@ Per semplicità, per mostrarne l'uso, vengono di seguito riportati
 degli esempi presi da una discussione sul forum del \guit. I codici si
 commentano quasi da soli:
 \begin{Verbatim}
-(define-skeleton TeX-dollar-sign-skeleton
-  "Make a pair of dollar signs and leave point inside" nil
-  "$"_"$"
-)
+(define-skeleton TeX-dollar-sign-skeleton "Make a pair of dollar
+  signs and leave point inside" nil "$"_"$" )
 
-(global-set-key (kbd "C-x e") 'Tex-dollar-sign-skeleton) 
+(global-set-key (kbd "C-x e") 'Tex-dollar-sign-skeleton)
 
-(define-skeleton TeX-square-skeleton
-  "Make a pair of square brackets and leave point inside" nil
-  "\\[" \n
-  _\n
-  "\\]"
-)
+(define-skeleton TeX-square-skeleton "Make a pair of square brackets
+  and leave point inside" nil "\\[" \n _\n "\\]" )
 
 (global-set-key (kbd "C-x s") 'TeX-square-skeleton
 \end{Verbatim}
@@ -621,8 +620,8 @@ vero e proprio. Infine con \verb!global-set-key! viene creata una
 combinazione di tasti personali per richiamare lo \emph{scheletro}.
 
 Gli esempi appena mostrati sono veramente semplici e forse se ne
-potrebbe fare a meno, ma servono per far capire con quanta semplicità si
-possono \emph{automatizzare} certe operazioni.
+potrebbe fare a meno, ma servono per far capire con quanta semplicità
+si possono \emph{automatizzare} certe operazioni.
 
 \subsection{Templates}
 \label{sec:skeltempl}
@@ -646,42 +645,41 @@ incluso nel documento va appunto nel file \emph{.emacs}. Un prototipo
 semplice potrebbe essere il seguente:
 
 \begin{Verbatim}
-(define-skeleton LaTeX-skeleton-letter
-    "Inserts a Latex letter skeleton into current buffer.
-     This only makes sense for empty buffers."
-      "Destinatario: "
-      "\\documentclass[a4paper,10pt]{letter}\n"
-      "\\usepackage[T1]{fontenc}\n"
-      "\\usepackage[latin1]{inputenc}\n"
-      "\\usepackage[italian]{babel}\n"
-      "\\name{Pinco Pallino}\n"
-      "\\address{Via Marco Polo 32\\\\ Napoli 80100\\\\ Italy}\n"
-      "\\begin{document}\n"
-      "\\begin{letter}{" str | " *** Destinatario *** " "}\n"
-      "\\opening{" _ "}\n\n"
-      "\\closing{Cordialmente}\n"
-      "\\end{letter}\n"
-      "\\end{document}\n")
+(define-skeleton LaTeX-skeleton-letter "Inserts a Latex letter
+skeleton into current buffer.  This only makes sense for empty
+buffers."  "Destinatario: "
+"\\documentclass[a4paper,10pt]{letter}\n"
+"\\usepackage[T1]{fontenc}\n" 
+"\\usepackage[utf8]{inputenc}\n"
+"\\usepackage[italian]{babel}\n" 
+"\\name{Pinco Pallino}\n"
+"\\address{Via Marco Polo 32\\\\ Napoli 80100\\\\ Italy}\n"
+"\\begin{document}\n" 
+"\\begin{letter}{" str | " *** Destinatario  *** " "}\n" 
+"\\opening{" _ "}\n\n" 
+"\\closing{Cordialmente}\n"
+"\\end{letter}\n" 
+"\\end{document}\n")
 \end{Verbatim}
 
 Come già detto dopo aver dichiarato il nome dello \emph{scheletro}
 seguono una o due (o a piacere) righe di commento. La riga:
 \begin{Verbatim}
-"Destinatario: " 
+"Destinatario: "
 \end{Verbatim}
 è una riga di prompt che userà il \emph{minibuffer} per interagire con
 l'utente quando verrà letto (o trovato) il simbolo \verb!str! nel
 codice; il valore inserito dall'utente verrà proprio sostituito a
 \verb!str!.
 
-Il simbolo '\_' indica la posizione dove verrà posto il cursore
-quando il codice \emph{skeleton} è completamente inserito. 
+Il simbolo '\_' indica la posizione dove verrà posto il cursore quando
+il codice \emph{skeleton} è completamente inserito.
 
 Il codice che si vuole inserire va sempre tra due doppi apici, i
 comandi vanno preceduti da un \emph{backslash} e per ritornare a capo
 si usa \verb!\n!.
 
-Infine, come precedentemente detto,    si può richiamare il \emph{codice
+Infine, come precedentemente detto, si può richiamare il \emph{codice
   pronto uso} con una combinazione di tasti personale, ad esempio se
 si vuole usare la combinazione \verb!C-c l!, bisogna scrivere nel file
 \emph{.emacs}:
@@ -701,30 +699,33 @@ Oltre alla vasta documentazione che si può reperire in rete ed ai
 manuali ufficiali, di particolare utilità sono le \emph{Reference
   Card}, disponibili sia per \emacs{}, sia per \auctex{}.
 
-Si tratta di un elenco delle principali funzionalità e dei comandi 
-a queste associate per poter, all'occorrenza, ricordare e trovare
+Si tratta di un elenco delle principali funzionalità e dei comandi a
+queste associate per poter, all'occorrenza, ricordare e trovare
 velocemente quello che serve.
 
 Il tutto è riportato in maniera ordinata e concisa in una sorta di
-forma tabulare, eventualmente  da stampare, e tenere a portata di mano
+forma tabulare, eventualmente da stampare, e tenere a portata di mano
 sulla propria scrivania.
 
 Le reference card sono disponibili sia in rete, sia sul proprio
 computer una volta installati \emacs{} ed \auctex. Sul proprio
-computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
+computer dovrebbero esserci anche i sorgenti pronti per essere
+compilati.
 
 \begin{figure}[t]
-  \centering
-  \unitlength=0.005\textwidth
-  \begin{picture}(200,120)
-    \put(0,0){\framebox(94,120){\includegraphics[width=0.51\textwidth]{refemacs}}}
-    \put(95,0){\rotatebox{90}{\tiny Immagine estratta da
-        \href{http://www.ps.uni-saarland.de/courses/prog-ws10/downloads/emacs_refcard.pdf}{GNU
-          Emacs Reference Card}}}
-    \put(100,0){\framebox(94,120){\includegraphics[width=0.51\textwidth]{refauctex}}}
-    \put(195,0){\rotatebox{90}{\tiny Immagine estratta da
-        \href{http://devcheatsheet.com/static/pdf/auctex-ref.pdf}{AUC\TeX{}
-          Reference Card}}}
+ \centering 
+ \unitlength=0.005\textwidth
+ \begin{picture}(200,120)
+  \put(0,0){\framebox(94,120){%
+   \includegraphics[width=0.51\textwidth]{refemacs}}}
+  \put(95,0){\rotatebox{90}{\tiny Immagine estratta da
+   \href{http://www.ps.uni-saarland.de/courses/prog-ws10/downloads/emacs_re
+     fcard.pdf}{GNU Emacs Reference Card}}}
+  \put(100,0){\framebox(94,120){%
+   \includegraphics[width=0.51\textwidth]{refauctex}}}
+  \put(195,0){\rotatebox{90}{\tiny Immagine estratta da
+   \href{http://devcheatsheet.com/static/pdf/auctex-ref.pdf}{AUC\TeX{}
+     Reference Card}}}
   \end{picture}
 \end{figure}
 
@@ -733,27 +734,31 @@ computer dovrebbero esserci anche i sorgenti pronti per essere compilati.
 
 \textcolor{red}{\lipsum[1]}
 
-\cleardoublepage
-\phantomsection
+\clearpage
+\phantomsection 
 \addcontentsline{toc}{section}{\bibname}
 \nocite{*}
 \printbibliography
+
 \vfill
 \phantomsection
 \addcontentsline{toc}{section}{Licenza d'uso}
 \section*{Licenza d'uso}
 \label{sec:lic}
-\mettifigura{\includegraphics[height=17pt]{by-nc-sa}\hspace{2mm}}\noindent 
-Quest'opera è soggetta alla Creative Commons Public License versione 3.0
-o posteriore: Attribuzione - Non commerciale - Condividi allo stesso modo. L'enunciato integrale della Licenza in versione 3.0 è
+
+\mettifigura{\includegraphics[height=17pt]{by-nc-sa}\hspace{2mm}}\noindent
+Quest'opera è soggetta alla Creative Commons Public License versione
+3.0 o posteriore: Attribuzione - Non commerciale - Condividi allo
+stesso modo. L'enunciato integrale della Licenza in versione 3.0 è
 reperibile sul sito ufficiale
 (\mano{}~\href{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}{CC
-By-Nc-Sa}).
+  By-Nc-Sa}).
 \end{document}
 
 %%% Local Variables: 
 %%% mode: latex
 %%% coding: utf-8
+%%% TeX-engine: xetex
 %%% TeX-master: t
 %%% End: 
 
